# tarang

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  VERSION  bump-version.sh  codecov.yml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: ai.rs  audio.rs  demux.rs
crates/tarang-ai/: Cargo.toml
crates/tarang-ai/src/: audio_utils.rs  daimon.rs  fingerprint.rs  lib.rs  scene.rs  thumbnail.rs  transcribe.rs  video_utils.rs
crates/tarang-audio/: Cargo.toml
crates/tarang-audio/src/: decode.rs  encode.rs  encode_aac.rs  encode_flac.rs  encode_opus.rs  lib.rs  mix.rs  output.rs  probe.rs  pw.rs  resample.rs  sample.rs
crates/tarang-audio/src/output/: mod.rs  pw.rs
crates/tarang-core/: Cargo.toml
crates/tarang-core/src/: lib.rs
crates/tarang-demux/: Cargo.toml
crates/tarang-demux/src/: ebml.rs  lib.rs  mkv.rs  mp4.rs  mux.rs  ogg.rs  wav.rs
crates/tarang-video/: Cargo.toml  build.rs
crates/tarang-video/src/: dav1d_dec.rs  lib.rs  openh264_dec.rs  openh264_enc.rs  rav1e_enc.rs  vaapi_enc.rs  vaapi_probe.rs  vpx_dec.rs  vpx_enc.rs
docs/: architecture.md  building.md  mcp-tools.md  roadmap.md
docs/decisions/: 001-feature-flags-per-codec.md  002-calendar-versioning.md  002-semver-versioning.md
docs/development/: migration-guide.md  performance-guide.md  roadmap.md  security-audit-low.md  threat-model.md  troubleshooting.md
examples/: fingerprint.rs  probe.rs  transcode.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_mkv.rs  fuzz_mp4.rs  fuzz_ogg.rs  fuzz_wav.rs
patches/cros-libva/src/buffer/: vp9.rs
patches/env-libvpx-sys/: .cargo_vcs_info.json  Cargo.toml  build.rs
scripts/: version-bump.sh
src/: core.rs  hwaccel.rs  lib.rs  main.rs
src/ai/: acoustid.rs  audio_utils.rs  daimon.rs  diarize.rs  fingerprint.rs  mod.rs  scene.rs  thumbnail.rs  transcribe.rs  video_utils.rs
src/audio/: decode.rs  decode_aac.rs  effects.rs  encode.rs  encode_aac.rs  encode_flac.rs  encode_opus.rs  loudness.rs  mix.rs  mod.rs  probe.rs  resample.rs  sample.rs
src/audio/output/: cpal_out.rs  mod.rs  pw.rs
src/demux/: ebml.rs  mkv.rs  mod.rs  mp4.rs  mux.rs  ogg.rs  wav.rs
src/mcp/: mod.rs  tools.rs
src/video/: convert.rs  dav1d_dec.rs  libde265_dec.rs  mod.rs  openh264_dec.rs  openh264_enc.rs  rav1e_enc.rs  scale.rs  test_utils.rs  vaapi_common.rs  vaapi_dec.rs  vaapi_enc.rs  vaapi_probe.rs  vpx_dec.rs  vpx_enc.rs
supply-chain/: audits.toml  config.toml
tests/: error_handling.rs  roundtrip.rs
