[package]
name = "tarang-ai"
version.workspace = true
edition.workspace = true
description = "AI features for Tarang — media analysis, content classification, transcription routing via hoosh"
license.workspace = true

[dependencies]
tarang-core = { path = "../tarang-core" }
tarang-demux = { path = "../tarang-demux" }
tarang-audio = { path = "../tarang-audio" }
tarang-video = { path = "../tarang-video" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
rustfft = { workspace = true }
image = { workspace = true }
