[package]
name = "tarang-audio"
version = "2026.3.16"
edition = "2024"
description = "Audio decoding for Tarang — pure Rust via symphonia (MP3, FLAC, WAV, OGG, AAC)"
license = "GPL-3.0"

[features]
default = []
pipewire = ["dep:pipewire"]
opus-enc = ["dep:opus"]
aac-enc = ["dep:fdk-aac"]

[dependencies]
tarang-core = { path = "../tarang-core" }
symphonia = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
pipewire = { workspace = true, optional = true }
opus = { workspace = true, optional = true }
fdk-aac = { workspace = true, optional = true }
