[package]
name = "tarang-audio"
version.workspace = true
edition.workspace = true
description = "Audio decoding for Tarang — pure Rust via symphonia (MP3, FLAC, WAV, OGG, AAC)"
license.workspace = true

[features]
default = []
pipewire = ["dep:pipewire"]
opus-enc = ["dep:opus"]
aac-enc = ["dep:fdk-aac"]

[dependencies]
tarang-core = { path = "../tarang-core" }
symphonia = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
pipewire = { workspace = true, optional = true }
opus = { workspace = true, optional = true }
fdk-aac = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
