[package]
name = "tarang-core"
version.workspace = true
edition.workspace = true
description = "Core types for Tarang media framework — codecs, formats, buffers, pipeline primitives"
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
