[package]
name = "tarang-demux"
version = "2026.3.16-1"
edition = "2024"
description = "Container demuxing for Tarang — MP4, MKV, WebM, OGG parsing in pure Rust"
license = "GPL-3.0"

[dependencies]
tarang-core = { path = "../tarang-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
