[package]
name = "tarang-demux"
version.workspace = true
edition.workspace = true
description = "Container demuxing for Tarang — MP4, MKV, WebM, OGG parsing in pure Rust"
license.workspace = true

[dependencies]
tarang-core = { path = "../tarang-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
