[package]
name = "tarang-video"
version = "2026.3.16"
edition = "2024"
description = "Video decoding for Tarang — thin Rust FFI wrappers around dav1d (AV1), openh264 (H.264), libvpx (VP9)"
license = "GPL-3.0"

[features]
default = []
dav1d = ["dep:dav1d"]
vpx = ["dep:libvpx-sys"]
vpx-enc = ["dep:libvpx-sys"]
rav1e = ["dep:rav1e"]
openh264 = ["dep:openh264"]
openh264-enc = ["dep:openh264"]

[dependencies]
tarang-core = { path = "../tarang-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
dav1d = { workspace = true, optional = true }
libvpx-sys = { workspace = true, optional = true }
rav1e = { workspace = true, optional = true }
openh264 = { workspace = true, optional = true }
