[package]
name = "tarang-video"
version = "2026.3.16-1"
edition = "2024"
description = "Video decoding and encoding for Tarang — thin Rust FFI wrappers around dav1d, openh264, libvpx, rav1e"
license = "GPL-3.0"

[features]
default = []
full = ["dav1d", "vpx", "vpx-enc", "rav1e", "openh264", "openh264-enc", "vaapi"]
dav1d = ["dep:dav1d"]
vpx = ["dep:env-libvpx-sys"]
vpx-enc = ["dep:env-libvpx-sys"]
rav1e = ["dep:rav1e"]
openh264 = ["dep:openh264"]
openh264-enc = ["dep:openh264"]
vaapi = ["dep:cros-libva"]

[dependencies]
tarang-core = { path = "../tarang-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
dav1d = { workspace = true, optional = true }
env-libvpx-sys = { workspace = true, optional = true }
rav1e = { workspace = true, optional = true }
openh264 = { workspace = true, optional = true }
cros-libva = { workspace = true, optional = true }
